--- a/index.html
+++ b/index.html
@@ -1,78 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/css/select2.min.css"
-          integrity="sha256-xJOZHfpxLR/uhh1BwYFS5fhmOAdIRQaiOul5F/b7v3s=" crossorigin="anonymous"/>
-
-    <link rel="stylesheet" href="css/select2-bootstrap4.min.css"/>
-    <link href="css/style.css" rel="stylesheet"/>
-</head>
-<body>
-<div id="app">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">MicromedaViz</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <button class="btn btn-outline-success reset" type="button">Reset</button>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <select class="property_selection" name="properties" title="Property Search">
-                    <option></option>
-                </select>
-            </form>
-        </div>
-    </nav>
-
-    <div class="container-fluid">
-        <div class="visualization"></div>
-    </div>
-
-    <div class="container-fluid fixed-bottom legend-row">
-        <div class="row justify-content-end">
-            <div class="col-2">
-                <div class="card text-white bg-info mb-3">
-                    <img class="card-img-top legend" src="assets/legend.svg">
-                    <div class="card-body">
-                        <h5 class="card-title">Legend</h5>
-                        <p class="card-text">Click the grey bar on the left to expand the genome properties heatmap.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"
-        integrity="sha256-gfQwA6PlkZsLqWu4bU4hXPrbTqzixm0B5MdvBLI+Oas=" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"
-        integrity="sha256-FcVIknBiVRk5KLQeIBb9VQdtFRMqwffXyZ+D8q0gQro=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.7.3/localforage.min.js"
-        integrity="sha256-H/ZsHjKSJUnQyCQHZwPmn7VTWFeTTI+qgCP1GkiB9zI=" crossorigin="anonymous"></script>
-
-<!-- Custom JS for Genome_Properties_Tree object the visualization. -->
-<script type="text/javascript" src="./js/genome_properties_tree.js"></script>
-
-<!-- Custom JS for drawing the visualization. -->
-<script type="text/javascript" src="./js/draw_diagram.js"></script>
-
-<!-- Custom JS for creating the visualization. -->
-<script type="text/javascript" src="js/micromeda.js"></script>
-</body>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
+    <head>
+        <title>Interactive Micromeda-Viz</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/png" href="https://imagizer.imageshack.com/img923/5444/WSvDT8.png"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+        <script src="https://kit.fontawesome.com/8635c6f6d0.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.19/lodash.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.9.0/localforage.min.js"></script>
+        <!-- Custom JS for Genome_Properties_Tree object the visualization. -->
+        <script type="text/javascript" src="./js/genome_properties_tree_fused.js"></script>
+        <!-- Custom JS for drawing the visualization. -->
+        <script type="text/javascript" src="./js/draw_diagram_fused.js"></script>
+        <!-- Custom JS for creating the visualization. -->
+        <script type="text/javascript" src="./js/micromeda_fused.js"></script>
+    </body>
+    
 </html>
