--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ and open the template in the editor.
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.19/lodash.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.9.0/localforage.min.js"></script>
         <!-- Custom JS for Genome_Properties_Tree object the visualization. -->
-        <script type="text/javascript" src="./js/genome_properties_tree_fused.js"></script>
+        <script type="text/javascript" src="./js/genome_properties_tree.js"></script>
         <!-- Custom JS for drawing the visualization. -->
-        <script type="text/javascript" src="./js/draw_diagram_fused.js"></script>
+        <script type="text/javascript" src="./js/draw_diagram.js"></script>
         <!-- Custom JS for creating the visualization. -->
-        <script type="text/javascript" src="./js/micromeda_fused.js"></script>
+        <script type="text/javascript" src="./js/micromeda.js"></script>
     </body>
     
 </html>
