latest version update
happy 2022!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Interactive Micromeda-Viz</title>
+        <title>Micromeda</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="https://imagizer.imageshack.com/img923/5444/WSvDT8.png"/>
@@ -23,11 +23,11 @@ and open the template in the editor.
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.19/lodash.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.9.0/localforage.min.js"></script>
         <!-- Custom JS for Genome_Properties_Tree object the visualization. -->
-        <script type="text/javascript" src="./js/genome_properties_tree_fused.js"></script>
+        <script type="text/javascript" src="./js/genome_properties_tree.js"></script>
         <!-- Custom JS for drawing the visualization. -->
-        <script type="text/javascript" src="./js/draw_diagram_fused.js"></script>
+        <script type="text/javascript" src="./js/draw_diagram.js"></script>
         <!-- Custom JS for creating the visualization. -->
-        <script type="text/javascript" src="./js/micromeda_fused.js"></script>
+        <script type="text/javascript" src="./js/micromeda.js"></script>
     </body>
     
 </html>
